# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2022-08-25 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi_service_request_rate results

2022-08-22 Michael Truog   <mjtruog at protonmail dot com>

    * Add size_erlang value to the CloudI Service API services_status output

2022-08-20 Michael Truog   <mjtruog at protonmail dot com>

    * Add log_normal_family to cloudi_statistics:describe_distribution/1

2022-08-13 Michael Truog   <mjtruog at protonmail dot com>

    * Add percentiles output to cloudi_service_request_rate

2022-08-12 Michael Truog   <mjtruog at protonmail dot com>

    * Add the cloudi_percentiles cloudi_core module

2022-08-11 Michael Truog   <mjtruog at protonmail dot com>

    * Fix the cloudi_service_shell terminate_kills_process feature
    * Change the default values for cloudi_service_shell arguments
      timeout_kills_process_signal and terminate_kills_process_signal
      to sigkill because it is the best cross-platform setting that
      terminates any shell

2022-08-10 Michael Truog   <mjtruog at protonmail dot com>

    * Change the minimum Haskell requirement to GHC 8.6.0

2022-08-09 Michael Truog   <mjtruog at protonmail dot com>

    * Remove cabal-install dependency for very important reasons:
        * All sandbox functionality was removed (cabal-install >= 3.4)
          without replacement functionality
          (https://github.com/haskell/cabal/issues/6445)
        * cabal-install source code releases are unable to bootstrap with
          local dependencies due to undependable releases that promote
          opaque binaries
          (https://github.com/haskell/cabal/issues/7904)
    * Manually create a Cabal sandbox without cabal-install for
      Haskell GHC compilation

2022-08-05 Michael Truog   <mjtruog at protonmail dot com>

    * Haskell support cabal-install >= 3.4 build change for
      integration tests

2022-08-04 Michael Truog   <mjtruog at protonmail dot com>
